--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
       <li>MongoDB</li>
       <li>ExpressJS</li>
     </ul>
+    <hr />
+    <h1>Other</h1>
+    <a href="./contact.html">Contact Me</a>
   </body>
 </html>
