--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     </ul>
     <hr />
     <h1>Other</h1>
-    <a href="./contact.html">Contact Me</a>
+    <ul>
+      <li><a href="./contact.html">Contact Me</a></li>
+    </ul>
   </body>
 </html>
